# ogawayama

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md
.github/actions/install-dependencies/: action.yml
.github/workflows/: ci-build.yml
bridge/: CMakeLists.txt
bridge/include/ogawayama/: logging.h
bridge/include/ogawayama/bridge/: provider.h  service.h
bridge/src/: CMakeLists.txt  fe_provider.cpp  fe_provider.h  service.cpp  worker.cpp  worker.h
cmake/: CompileOptions.cmake  Config.cmake.in  FindMessagePack.cmake  Findgflags.cmake  Findglog.cmake  InstallOptions.cmake  Tests.cmake
common/: CMakeLists.txt
common/include/ogawayama/common/: bridge.h  channel_stream.h  parameter_set.h  row_queue.h  shared_memory.h
common/include/ogawayama/common/serialization/: column_variant.h  metadata.h
docs/: API.md  API_contracts.md  LTX.md  Prepared.md  TPC-C_table_generation.md  Type.md  get_column_values.md  preparedStatement.md  transfering_multiple_rows_at_once.md
docs/detail/: communication.md
examples/: CMakeLists.txt
examples/bootstrap/: CMakeLists.txt  backend.cpp
examples/cli/: CMakeLists.txt  main.cpp
examples/prepare/: CMakeLists.txt  main.cpp  main.cpp~
examples/query/: CMakeLists.txt  main.cpp
examples/server/: CMakeLists.txt  backend.cpp
examples/simple/: CMakeLists.txt  main.cpp
examples/tpcc/: CMakeLists.txt  main.cpp  tpcc_common.h  tpcc_delivery.cpp  tpcc_neworder.cpp  tpcc_orderstatus.cpp  tpcc_payment.cpp  tpcc_scale.h  tpcc_schema.h  tpcc_stocklevel.cpp  tpcc_transaction.h
examples/tpcc_loader/: CMakeLists.txt  main.cpp  tpcc_common.h  tpcc_load.cpp  tpcc_scale.cpp  tpcc_scale.h  tpcc_schema.h  tpcc_tables.cpp  tpcc_transaction.h
examples/tpcc_loader/sql/: setup.sql  setup_frontend.sql
include/ogawayama/stub/: Command.h  CreateTableCommand.h  api.h  error_code.h  metadata.h  search_path.h  table_list.h  table_metadata.h  transaction_option.h
mock/: CMakeLists.txt
mock/src/: CMakeLists.txt  connection.cpp  connectionImpl.h  result_set.cpp  result_setImpl.h  stub.cpp  stubImpl.h  transaction.cpp  transactionImpl.h
mock/test/: ApiTest.cpp  main.cpp
server/: CMakeLists.txt
server/protos/: CMakeLists.txt
server/src/: CMakeLists.txt  SignalHandler.h  backend.cpp  backend.h  fe_provider.cpp  fe_provider.h  ipc_request.cpp  ipc_response.cpp  ipc_response.h  main.cpp  provider.h  server.h  server_wires.h  utils.cpp  utils.h  wire.h  worker.cpp  worker.h
server/tools/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
src/: CMakeLists.txt  backend.cpp  ipc_request.cpp  ipc_request.h  ipc_response.cpp  ipc_response.h  server.h  server_wires.h  server_wires_impl.h  wire.h  worker.cpp  worker.h
src/include/tateyama/transport/: client_wire.h
src/jogasaki/serializer/: value_input_exception.h
src/jogasaki/utils/: decimal.cpp  decimal.h
src/ogawayama/stub/: connection.cpp  connectionImpl.h  prepared_statement.cpp  prepared_statementImpl.h  result_set.cpp  result_setImpl.h  search_path_adapter.cpp  search_path_adapter.h  stub.cpp  stubImpl.h  table_list_adapter.cpp  table_list_adapter.h  table_metadata_adapter.cpp  table_metadata_adapter.h  transaction.cpp  transactionImpl.h  transport.h
src/ogawayama/transport/: transport.h  tsurugi_error.h
src/takatori/util/: exception.h
src/tateyama/authentication/: authentication.cpp  authentication.h  base64.h  credential_handler.cpp  credential_handler.h  rsa.h  token_handler.h
src/tateyama/proto/endpoint/: request.proto
src/tateyama/transport/: client_wire.h  timer.h  wire.h
src/tateyama/utils/: protobuf_utils.cpp
stub/: CMakeLists.txt
stub/include/ogawayama/stub/: Command.h  CreateTableCommand.h  api.h  error_code.h  metadata.h
stub/include/tateyama/transport/: client_wire.h
stub/mock/: CMakeLists.txt  connection.cpp  connectionImpl.h  result_set.cpp  result_setImpl.h  stub.cpp  stubImpl.h  transaction.cpp  transactionImpl.h
stub/mock/src/: CMakeLists.txt  connection.cpp  connectionImpl.h  result_set.cpp  result_setImpl.h  stub.cpp  transaction.cpp
stub/mock/test/: ApiTest.cpp  CMakeLists.txt  main.cpp
stub/src/: CMakeLists.txt  connection.cpp  connectionImpl.h  prepared_statement.cpp  prepared_statementImpl.h  result_set.cpp  result_setImpl.h  stub.cpp  stub.h  stubImpl.h  transaction.cpp  transactionImpl.cpp  transactionImpl.h
stub/src/ogawayama/stub/: connection.cpp  connectionImpl.h  prepared_statementImpl.h  result_set.cpp  result_setImpl.h  stub.cpp  stubImpl.h  transaction.cpp  transactionImpl.h  transport.h
stub/test/: ApiTest.cpp  CMakeLists.txt  ClientTimeoutTest.cpp  ConnectionErrorTest.cpp  ErrorTest.cpp  OwnerTimeoutTest.cpp  ParseErrorTest.cpp  PrepareTest.cpp  SchemaDeployTest.cpp  TestRoot.h  TimeoutTest.cpp  main.cpp
stub/test/configuration/: tsurugi.ini
stub/test/schema/: datatypes.json  tables.json
test/: ApiTest.cpp  CMakeLists.txt  ClientTimeoutTest.cpp  CommunicationTest.cpp  OwnerTimeoutTest.cpp  ParseErrorTest.cpp  PrepareTest.cpp  ResponseOnlyTest.cpp  ResultSetTest.cpp  TestRoot.h  main.cpp
test/include/tateyama/framework/: component.h
test/ogawayama/bridge/: SchemaDeployTest.cpp  database_mock.cpp  database_mock.h
test/ogawayama/bridge/schema/: tables.json
test/ogawayama/stub/: ApiTest.cpp  AuthenticationTest.cpp  ErrorTest.cpp  PathTest.cpp  PreparedQueryTest.cpp  PreparedStatementTest.cpp  PreparedTest.cpp  TestRoot.h  TwoResultsetOpenTest.cpp  channel_stream.h  channel_stream_for_test.h  decimal.h  endpoint.h  endpoint_proto_utils.h  server_wires_impl.h  stub_test_root.h
test/ogawayama/stub/configuration/: tsurugi.ini
test/schema/: indexes.json
test/tateyama/authentication/crypto/: base64.h  key.h  rsa.h
utilities/: CMakeLists.txt  terminator.cpp  terminator.cpp~  terminator.h
